--- a/pages/share/share.wxml
+++ b/pages/share/share.wxml
@@ -6,7 +6,7 @@
     <text>{{userInfo.nickName}}</text>
   </view>
   <view class='content'>  
-    <text>恭喜发财，大吉大利</text>
+    <text>{{bless}}</text>
     <button open-type="share">转发到好友或群聊</button>
     <text class='goHome' bindtap='goHome' >回到首页</text>
   </view>
