--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,184 +1,334 @@
+/* pages/exchange/exchange.wxss */
 .container {
-  /* display: flex; */
-  position: relative;
+  width: 100%;
   min-height: 100vh;
-  background: #ECECEC;
-}
-.banner {
-  width: 92%;
-  height: 300rpx;
-  padding: 30rpx 42rpx;
-  background: #373b4c;
-  box-sizing: border-box;
-  position: relative;
-  margin-top: 32rpx;
-  border-radius: 12rpx;
-}
-.banner view {
+  background: #EAEAEA;
   display: block;
-  color: #ffffff;
-}
-.banner .photo {
-  height: 88rpx;
-  display: flex;
-  align-content: center;
-}
-.photo image {
-  width: 84rpx;
-  height: 84rpx;
-  border-radius: 42rpx;
-  border: 2rpx solid #FFFFFF;
-}
-.photo text {
-  line-height: 88rpx;
-  margin-left: 20rpx;
-  font-size: 36rpx;
-}
-.photo view {
-  display: inline-block;
-  width: 84rpx;
-  height: 84rpx;
-  border-radius: 42rpx;
-  border: 2rpx solid #FFFFFF;
-  background: #F2F2F2;
-}
-.banner .scores {
-  position: absolute;
-  top: 40rpx;
-  right: 0;
-  width: 200rpx;
-  height: 72rpx;
-  background: #3BBF81;
-  border-radius: 36rpx 0 0 36rpx;
-  display: flex;
-  align-items: center;
-  text-align: center;
-}
-.banner .scores image {
-  width: 56rpx;
-  height: 56rpx;
-  margin-left: 16rpx;
-}
-.banner .scores text {
-    font-size: 28rpx;
-}
-.pic {
-  position: absolute;
-  top: 200rpx;
-  right: 40rpx;
-}
-.banner .bindApp {
-  width: 56rpx;
-  height: 53rpx;
-  margin-left: 20rpx;
-}
-.red {
-  height: 70rpx;
-  width: 70rpx;
-  vertical-align: -9rpx;
-}
-.banner .bindApp1 {
-  width: 44rpx;
-}
-.banner view text {
-  font-size: 32rpx;
-}
-.banner .name {
-  margin-top: 48rpx;
-  font-size: 28rpx;
-  line-height: 48rpx;
-  color: #5E6A88;
-}
-.number {
-  font-size: 48rpx;
-  line-height: 66rpx;
+  position: relative;
 }
 .header {
-  background: #373b4c;
+  background: #ffffff;
   height: 80rpx;
   line-height: 80rpx;
   width: 100%;
-  color: #ffffff;
-  font-size: 36rpx;
-  text-indent: 20rpx;
 }
-.detail {
-  padding: 20rpx 0;
-  width: 100%;
-  box-sizing: border-box;
-  flex: 1;
-  margin-bottom: 48rpx;
+.header>view {
+  color: #5E6A88;
+  font-size: 32rpx;
+  float: left;
+  width: 170rpx;
+  text-align: center;
+  margin-right: 10rpx;
 }
-.detail view.list {
-  height: 200rpx;
-  width: 92%;
-  margin: 32rpx auto;
-  font-size: 36rpx;
-  color: #373b4c;
-  box-sizing: border-box;
-  background: #ffffff;
-  border-radius: 12rpx;
-}
-.list .content {
-  height: 136rpx;
-  line-height: 136rpx;
-  padding: 0 32rpx;
-  font-size: 36rpx;
-}
-.list .content image {
-  width: 80rpx;
-  height: 80rpx;
-  vertical-align: middle;
-  margin-right: 24rpx;
-}
-.list .content .coin {
-  color: #212A42;
-  text-transform: uppercase;
-}
-.list .links {
+.header view.cur text {
+  display: inline-block;
+  padding: 0 10rpx;
   height: 64rpx;
   line-height: 64rpx;
-  background: #F2F2F2;
-  border-radius: 0 0 12rpx 12rpx;
-  display: flex;
+  padding-top: 8rpx;
+  color: #212A42;
+  font-size: 32rpx;
+  border-bottom: 8rpx solid #0BBD89;
 }
-
-.detail .noData {
-  line-height: 200rpx;
-  height: 200rpx;
-  text-align: center;
-  color: #cccccc;
-}
-.detail view .points {
+.header .checkbox {
   float: right;
-  color: #3BBF81;
+  color: #5E6A88;
+  font-size: 32rpx;
+  text-transform: capitalize;
 }
-.links view {
+.checkbox image {
+  width: 56rpx;
+  height: 56rpx;
+  border-radius: 28rpx;
+  vertical-align:-12rpx;
+  margin-right: 10rpx;
+}
+.checkbox .icon {
+  display: inline-block;
+  width: 0;
+  height: 0;
+  border-left: 6px solid transparent;
+  border-right:6px solid transparent;
+  border-top: 8px solid #5E6A88;
+  margin-left: 8rpx;
+}
+.shopList {
+  /* display: flex;
+  flex-flow: row wrap; */
+  margin-bottom: 20rpx;
+  /* justify-content: space-around;
+  align-items: flex-start;
+  align-content: flex-start; */
+}
+.shop {
+  width: 47%;
+  margin-left: 2%;
   float: left;
-  width: 33.3%;
+  height: 490rpx;
+  background: #ffffff;
+  margin-top: 20rpx;
+  border-radius: 12rpx;  
+  padding: 24rpx;
+  flex: 0 0 1;
+  box-sizing: border-box;
+}
+.shop image {
+  width: 100%;
+  height: 300rpx;
+}
+.info {
+  display: flex;
+  align-items: center;
+  margin-top: 16rpx;
+  border-top: 1px solid #EAEAEA;
+  padding: 20rpx 0 16rpx;
+  height: 48rpx;
+}
+.info text {
+  flex: 1;
+  color: #212A42;
+  font-size: 28rpx;
+  line-height: 36rpx;
+}
+.info button {
+  background: #0BBD89;
+  width: 70rpx;
+  height: 48rpx;
+  border-radius: 18rpx;
+  color: #ffffff;
+  font-size: 24rpx;
+  line-height: 48rpx;
+  text-align: center;
+  padding: 0;
+}
+.price {
+  height: 38rpx;
+  line-height: 38rpx;
+  font-size: 28rpx;
+  color: #212A42;
+}
+.price .unit {
   color: #5E6A88;
   font-size: 24rpx;
+  margin-left: 8rpx;
+  text-transform: uppercase;
+}
+.dialog {
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10;
+}
+.dialog .mask {
+  position: absolute;
+  left: 0;
+  top: 0;
+  background: rgba(0, 0, 0, 0.4);
+  width: 100%;
+  height: 100%;
+  z-index: 11;
+}
+.dialog .change, dialog .showPic {
+  position: absolute;
+  top: 190rpx;
+  left: 0;
+  width: 100%;
+  height: calc(100% - 190rpx);
+  padding: 0 32rpx;
+  box-sizing: border-box;
+  background: #ffffff;
+  border-radius: 16rpx 16rpx 0 0;
+  z-index: 12;
+}
+.change .hd {
+  height: 80rpx;
+  line-height: 80rpx;
+  font-size: 28rpx;
+  color: #5E6A88;
+}
+.dialog .closeDialog {
+  width: 40rpx;
+  height: 40rpx;
+  float: right;
+  margin: 24rpx 0;
+}
+.content {
+  margin-top: 108rpx;
+  padding-left: 160rpx;
+  height: 166rpx;
+  
+}
+.content>image {
+  width: 136rpx;
+  height: 136rpx;
+  border-radius: 68rpx;
+  float: left;
+  margin-left: -160rpx;
+}
+.content .name {
+  font-size: 32rpx;
+  line-height: 45rpx;
+  color: #212A42;
+  display: block;
+  margin-bottom: 12rpx;
+}
+.content .desc {
+  font-size: 24rpx;
+  line-height: 32rpx;
+  color: #5E6A88;
+}
+.number {
+  font-size: 32rpx;
+  color: #212A42;
+  padding-bottom: 24rpx;
+  border-bottom: 1px solid #ECECEC;
+  display: flex;
+}
+.number .nums {
+  flex: 1;
+}
+.number .nums .desc {
+  font-size: 24rpx;
+  color: #5E6A88;
+}
+.number .action {
+  height: 40rpx;
+  line-height: 40rpx;
+}
+.number .action image {
+  width: 40rpx;
+  height: 40rpx;
+  vertical-align: -4rpx;
+}
+.number .num {
+  display: inline-block;
+  width: 72rpx;
   text-align: center;
+  height: 40rpx;
+  line-height: 40rpx;
+  font-size: 32rpx;
+  color: #000000;
 }
-.links view:first-child {
-  border-right: 1px solid #F9F9F9;
+.dialog hr {
+  height: 1px;
+  width: 100%;
+  background: #ECECEC;
+  margin: 24rpx 0 32rpx;
 }
-.links view image {
+.total {
+  padding: 32rpx 0 0;
+  display: flex;
+  height: 56rpx;
+  line-height: 56rpx;
+  font-size: 40rpx;
+  color: #212A42;
+}
+.total view {
+  flex: 1;
+  font-size: 32rpx;
+  text-transform: capitalize;
+  height: 56rpx;
+  line-height: 56rpx;
+}
+.total view image {
+  width: 56rpx;
+  height: 56rpx;
+  border-radius: 28rpx;
+  margin-right: 8rpx;
+  vertical-align: -14rpx;
+}
+.confirm {
+  position: absolute;
+  bottom: 156rpx;
+  left: 20%;
+  width: 60%;
+  background: #0BBD89;
+  height: 88rpx;
+  border-radius: 44rpx;
+  color: #ffffff;
+  font-size: 36rpx;
+}
+.picker {
+  position: fixed;
+  /* top: calc(100vh - 300rpx); */
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 300rpx;
+  text-align: center;
+  text-transform: uppercase;
+  background: #ffffff;
+}
+picker-view {
+  width: 100%;
+  height: 100%;
+}
+.picker view {
+  width: 100%;
+}
+.address {
+  margin-top: 32rpx;
+}
+.hasAddress {
+  display: flex;
+}
+.hasAddress text {
+  flex: 1;
+}
+.hasAddress button {
+  padding: 0 16rpx;
+  height: 40rpx;
+  line-height: 40rpx;
+  border-radius: 20rpx;
+  font-size: 28rpx;
+  color: #ffffff;
+  background: #707B99;
+}
+.editAddress view {
+  width: 100%;
+  height: 80rpx;
+  line-height: 80rpx;
+  border-bottom: 1px solid #dadbe0;
+}
+.editAddress view input {
+  line-height: 80rpx;
+  height: 80rpx;
+}
+.placeholder {
+  color: #919191;
+  font-size: 28rpx;
+}
+.showPic {
+  position: absolute;
+  z-index: 12;
+  width: 90%;
+  margin: 0 auto;
+  margin-top: -380rpx;
+  min-height: 660rpx;
+  left: 5%;
+  top: 40vh;
+  background: #ffffff;
+  border-radius: 12rpx;
+  padding-bottom: 60rpx;
+}
+.showPic .pic {
+  padding: 10rpx 60rpx;
+  width: 100%;
+  box-sizing: border-box;
+  /* height: auto; */
+  min-height: 540rpx;
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 16rpx;
+}
+.showPic .closeDialog {
+  margin-top: 10rpx;
   margin-right: 10rpx;
-  vertical-align: middle;
 }
-.links view:first-child image {
-  width: 28rpx;
-  height: 26rpx;
-  vertical-align:-2rpx;
-}
-.links view.goRed image {
-  width: 26rpx;
-  height: 28rpx;
-  vertical-align:-4rpx;
-}
-.links view:last-child image {
-  width: 36rpx;
-  height: 36rpx;
-  vertical-align:-7rpx;
+.showPic text {
+  display: block;
+  margin: 0 60rpx;
+  line-height: 40rpx;
 }
