--- a/pages/payScores/payScores.wxml
+++ b/pages/payScores/payScores.wxml
@@ -4,6 +4,10 @@
     <view class="header">确认支付给对方{{volume}} {{currency}}!</view>
   </view> -->
   <view class="needSet">
+    <view class="heads">
+      <image src="{{avatar}}"></image>
+      <text>转账给{{nickname}}</text>
+    </view>
     <view class="inputs">
 			<view class="coin">
 				<text>付款币种</text>
@@ -14,7 +18,7 @@
 			<view class="number">
 				<text>付款金额</text>
 				<view>
-					<input type="number" maxlength="10" bindinput="inputChange" placeholder="输入金额" />
+					<input type="digit" maxlength="10" bindinput="inputChange" placeholder="输入金额" />
 				</view>
 			</view>
 		</view>
