--- a/pages/chooseCoin/chooseCoin.wxss
+++ b/pages/chooseCoin/chooseCoin.wxss
@@ -1,19 +1,20 @@
 /* pages/chooseCoin/chooseCoin.wxss */
 .coins {
-		width: 92%;
-		margin: 0 auto;
-		padding-top: 40rpx;
-		display: flex;
-		flex-flow: row wrap;
+  width: 92%;
+  margin: 0 auto;
+  padding-top: 40rpx;
+  display: flex;
+  flex-flow: row wrap;
+  align-content: flex-start;
+  justify-content: space-between;
 }
-.coins view {
+.coins button {
   flex: 0 0 30%;
   margin-right: 5%;
   margin-bottom: 30rpx;
-}
-.coins view:nth-child(3n) {
-  margin-right: 0;
-}
-button {
   text-transform: uppercase;
+  margin-left: 0;
+}
+.coins button:nth-child(3n) {
+  margin-right: 0;
 }
