--- a/pages/changeHis/changeHis.wxml
+++ b/pages/changeHis/changeHis.wxml
@@ -7,7 +7,7 @@
       <text>{{curData.currency}}</text>
       <view class='icon'></view>
     </view>
-    <view bindtap="goShop"><text>商品</text></view>
+    <!-- <view bindtap="goShop"><text>商品</text></view> -->
     <view class='cur'><text>兑换历史</text></view>
   </view>
   <scroll-view class='shopList'>
